# service/src/main/java/com/lopixlabs/app/fullstackdemo/login/model/Login.java
@@ -1,0 +1,14 @@
+package com.lopixlabs.app.fullstackdemo.login.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Value;
+import lombok.extern.jackson.Jacksonized;
+
+@Value
+@AllArgsConstructor
+@Builder
+@Jacksonized
+public class Login {
+    String authentication;
+}
